manu: BEHAVIORAL CHANGE: FORMS ARE NOW POST BY DEFAULT (except searchForm)
manu: fixing a bug that leads to wrong set queries for types that point to types that have the same short name
manu: new behavior for the title field: if no suitable title field is found, return ptrIndex by default (instead of e.g. a set field name, as the old parser was doing)

NOT TO BE RELEASED YET (need more testing)
manu: auto-complete for mak:input (char and ptr)
manu, marius: edit-in-place for mak:input and mak:list ("editable" attribute). Is yet to be finished.

------------------------------------------
- add your changes -

<!-- ============================================================================= -->
<!-- ====================== NOT-TESTED HEAD RELEASES ============================= -->
0.8.2.4 12 Nov 2009
manu: fix to the fix regarding comparison validation rules in 0.8.2.3
manu: adding paraphrases in mdd.g to make parser error messages more understandable
manu: fixed rendering of multiple select inputs: </select> no longer appended if input is empty (no input rendered)
manu: resolved some lexical non-determinisms in mdd parser
manu: making it possible to specifiy location of resource in makumbaToolsConfig section of Makumba.conf using e.g. prototype.js_location = relative/path/to/prototype.js
manu: fixing bug in new mdd parser regarding check of set int enum values


0.8.2.3 25 Oct 2009
manu: changing syntax of unique() {field1, field2} :"error" to unique(field1,field2) : "error"
manu: fixing bug in comparison validation rule: validation rule breaks if an int/real field is left blank
manu: preparing RecordEditor to allow for advanced validation mechanism, when form is not complete
      (i.e. validation rule validates on a field that is not in the form)

0.8.2.2 18 Oct 2009
manu: fixing bug with MQL function type analysis

0.8.2.1 16 Oct 2009
cristi: fixing bug with setintEnum
manu: fixing bug with setcharEnum

0.8.2   18 Sep 2009